# Jarvis

./: README.md  pyproject.toml  requirements.txt
WindowsAIAssistant/: .gitignore
WindowsAIAssistant/backend/: api.py  backend_router.py  config.py  intent_parser.py  main.py  schemas.py  task_planner.py
WindowsAIAssistant/backend/__pycache__/: api.cpython-313.pyc.2181549373936  task_planner.cpython-313.pyc.2181549757616
WindowsAIAssistant/windowsAssistant.UI/: App.xaml.cs  Intentapiclient.cs  JarvisUiCrashLog.txt  MainWindow.xaml  MainWindow.xaml.cs  windowsAssistant.UI.csproj
docs/: Verification_Engine_Architecture (1).md  Verification_Engine_HLD.docx  Verification_Engine_LLD.docx  Verification_Engine_MVP_Specification.docx  Verification_Engine_Software_Blueprint.docx
tests/e2e/: test_verification_mvp_pipeline.py
tests/integration/: test_api_and_adapters.py
verification_engine.egg-info/: top_level.txt
verification_engine/api/: app.py  dependencies.py
verification_engine/config/: __init__.py  storage_config.py  verification_config.py
verification_engine/contracts/: enums.py  schemas.py
verification_engine/decision/: __init__.py  _base.py
verification_engine/drift/: __init__.py  _base.py  exceptions.py
verification_engine/integrations/: __init__.py
verification_engine/orchestrator/: exceptions.py  execution_context.py  state_machine.py  verification_orchestrator.py
verification_engine/side_effects/: _base.py  exceptions.py
verification_engine/storage/: exceptions.py
verification_engine/verification/: _base.py  exceptions.py
(+588 files in other folders)
