[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "verification_engine"
version = "0.1.0"
requires-python = ">=3.12"

[tool.setuptools]
packages = ["verification_engine"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]